# NLP-TUGraz-2026

./: .gitignore  README.md  data.py  evaluation.py  labels.py  mlflow_utils.py  pyproject.toml  review.py
dataset/: stage0_67.csv
stage1/: features.py  knowledge_base.py  nn_model.py  pipelines.py  predict.py  train.py  vectorizer.py
