[project]
name = "nlp-tugraz-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
