[project]
name = "nlp-tugraz-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "keras==3.14.1",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow==2.21.0",
]
